Clear Cache folder in Mac -Shayan